# bayesian-quiz

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  LICENSE  Procfile  README.md  prek.toml  pyproject.toml  simulate_players.py
.github/workflows/: tests.yml
deploy/: README.md  exe-setup.sh
mockups/: index.html  participant.html  projector.html  quizmaster.html
quizzes/: sample.txt
src/bayesian_quiz/: __init__.py  app.py  questions.py  scoring.py  state.py
src/bayesian_quiz/static/: dist-chart.js
src/bayesian_quiz/templates/: base.html  control_pick.html  index.html  participant.html  projector.html  quizmaster.html
src/bayesian_quiz/templates/fragments/: nickname_arena.html  participant.html  projector.html  quizmaster.html
tests/: conftest.py  test_concurrent_quizzes.py  test_game_registry.py  test_nicknames.py  test_questions.py  test_quizmaster_pass.py  test_scoring.py  test_state_scoring.py  test_xss.py
